Fixed a bug that caused pages to overlap on smaller screens.

--- a/index.css
+++ b/index.css
@@ -36,7 +36,3 @@
     background: linear-gradient(to right, #57484f ,#ab7766, #e2a761);
     width: 100%;
 }
-
-.landing {
-    height: 100%;
-}
